fix: set transactions card font and spacing styles

--- a/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
@@ -124,7 +124,6 @@ $breakpoint-desktop: 900px;
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 1rem;
     box-sizing: border-box;
 }
 
@@ -146,6 +145,7 @@ $breakpoint-desktop: 900px;
     flex-direction: column;
     align-items: flex-start;
     margin-left: var(--givewp-spacing-2);
+    gap: 0.313rem;
 }
 
 .transactionIcon {
@@ -199,7 +199,11 @@ $breakpoint-desktop: 900px;
         font-size: 1rem;
         font-weight: 500;
         line-height: 1.5;
-        color: #4b5563;
+        color: var(--givewp-neutral-700);
+    }
+
+    strong {
+        color: var(--givewp-neutral-900);
     }
 }
 
@@ -216,11 +220,11 @@ $breakpoint-desktop: 900px;
     align-items: center;
     justify-content: center;
     max-height: fit-content;
-    margin-left: var(--givewp-spacing-2);
     padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
     border-radius: 9999px;
     font-weight: 600;
-    font-size: 0.85rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
     text-transform: capitalize;
 
     &.completed {
